# STM32H7_INVERTER

./: .gitignore  AGENTS.md  README.md  apollo_h743_lvgl_reproduction_plan.md
apollo_h743_lvgl_hmi/: CMakeLists.txt  CMakePresets.json
apollo_h743_lvgl_hmi/App/Core/Inc/: FreeRTOSConfig.h  app_bms_can.h  app_comm_bus.h  app_critical.h  app_diag.h  app_dsp_link.h  app_iap.h  app_io_expander.h  app_log.h  app_modbus_rtu.h  app_rs485_modbus.h  app_sd.h  app_settings.h  app_storage.h  app_system_model.h  app_tasks.h  app_ui_hmi.h  app_usb_cdc.h  app_vector.h  app_w25q256.h  lcd.h  led.h  lv_conf.h  lvgl_port.h  main.h  sdram.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  system_clock.h  touch.h  uart.h  usb_device.h  usbd_conf.h  usbd_desc.h
apollo_h743_lvgl_hmi/App/Core/Src/: app_bms_can.c  app_comm_bus.c  app_crc32.c  app_critical.c  app_diag.c  app_dsp_link.c  app_iap.c  app_io_expander.c  app_log.c  app_modbus_rtu.c  app_rs485_modbus.c  app_sd.c  app_settings.c  app_storage.c  app_system_model.c  app_tasks.c  app_ui_hmi.c  app_usb_cdc.c  app_vector.c  app_w25q256.c  lcd.c  led.c  lvgl_port.c  main.c  sdram.c  stm32h7xx_it.c  syscalls.c  system_clock.c  touch.c  uart.c  usb_device.c  usbd_conf.c  usbd_desc.c
apollo_h743_lvgl_hmi/App/Linker/: STM32H743IITx_APP_A.ld  STM32H743IITx_APP_B.ld  STM32H743IITx_FLASH.ld
apollo_h743_lvgl_hmi/Boot/Core/Inc/: boot_iap.h  boot_jump.h  main.h  stm32h7xx_it.h
apollo_h743_lvgl_hmi/Boot/Core/Src/: boot_iap.c  boot_jump.c  main.c  stm32h7xx_it.c
apollo_h743_lvgl_hmi/Boot/Linker/: STM32H743IITx_BOOT.ld
apollo_h743_lvgl_hmi/Common/Inc/: app_crc32.h  app_iap_record.h  app_tag.h  flash_layout.h
apollo_h743_lvgl_hmi/Common/Src/: app_iap_record.c  app_tag.c
apollo_h743_lvgl_hmi/Docs/: DSP和ARM之间通信协议V2.0.14-20251107.docx  bringup_log.md  hardware_checklist.md  iap_design.md  memory_map.md  phase13_comm_architecture_plan.md  phase13_interview_script.md  usb_iap_case_study.md  深圳迈格瑞能技术混合逆变器_5K_BMS协议V1.04.xlsx
apollo_h743_lvgl_hmi/Middlewares/FATFS/source/: diskio.c  ffconf.h
apollo_h743_lvgl_hmi/Middlewares/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
apollo_h743_lvgl_hmi/Middlewares/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
apollo_h743_lvgl_hmi/Middlewares/lvgl/: VERSION.txt
apollo_h743_lvgl_hmi/Tools/iap_send_serial/: iap_send_serial.py
apollo_h743_lvgl_hmi/Tools/iap_serial_cli/: ApolloIapSerialCli.csproj  Program.cs
apollo_h743_lvgl_hmi/Tools/iap_serial_gui/: ApolloIapSerialGui.csproj  Crc32.cs  MainForm.cs  Program.cs  README.md  SerialIapTransfer.cs
apollo_h743_lvgl_hmi/Tools/pack_app/: pack_app.py
